[gd_scene load_steps=2 format=3 uid="uid://torchitem"]

[ext_resource type="Script" uid="uid://bb2dy8s1xkqyk" path="res://scripts/torch_item.gd" id="1_script"]

[node name="TorchItem" type="Control"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 279.0
offset_bottom = 24.0
script = ExtResource("1_script")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContentHBox" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NameLabel" type="Label" parent="PanelContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "Torch"

[node name="RemoveButton" type="Button" parent="PanelContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "remove"

[node name="ExtinguishButton" type="Button" parent="PanelContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "toggle"

[node name="TimeLabel" type="Label" parent="PanelContainer/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "00:00"
horizontal_alignment = 1
